cambios de lectura en sqlite

--- a/www/index.html
+++ b/www/index.html
@@ -57,7 +57,7 @@
                 <input type="button" id="searchEarthQuake" value="Buscar sismos">
             </div>
             <div style="text-align: center;">
-                <input type="button" onclick="sql2();" value="Guardar Datos Optenidos" style="width: 90%;margin-top: 12px;">
+                <input type="button" onclick="sql3();" value="Guardar Datos Obtenidos" style="width: 90%;margin-top: 12px;">
             </div>
             
         </div>
